--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,23 +14,22 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:configChanges="orientation|screenSize|keyboardHidden"/>
-
-        <activity android:name=".SplashActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".SplashActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".NewsDetailsActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden">
-
-        </activity>
+        <activity
+            android:name=".NewsDetailsActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden" />
+        <activity android:name=".SettingsActivity"></activity>
     </application>
 
 </manifest>
